--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,21 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-derive_more = "0.99.17"
+dhat = {version= "0.3.1", optional = true}
 halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "ac738ca5a143eb0389e73381967b5ab0280ed64e"}
 icecream = "0.1.0"
+json = "0.12.4"
 rand = "0.8.5"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[features]
+dhat-heap = ["dep:dhat"]
+
+[profile.release]
+debug=1
+
+[[bench]]
+name = "mlp_4d"
+harness = false
